# YouTwo

./: .env.example  .gitignore  README.md  agent.py  app.py  kg_pipeline.py  mcp_client.py  modal_app.py  notebook.ipynb  plan.md  pyproject.toml  rag.py  requirements-extra.txt  requirements.txt  run_agent.py  run_mcp.py  run_modal_app.py  schemas.py  vectara_query_response.json
backend/: README.md
backend/convex/: chunks.ts  embeddings.ts  entities.ts  http.ts  journals.ts  knowledge.ts  metadata.ts  operations.ts  patches.ts  relations.ts  schema.ts  sources.ts  tests.ts  types.ts
deployment/: modal_app.py
examples/: convex-llamaindex.ipynb  hf-inference.ipynb  notebook.ipynb  sandbox.ipynb
gradio-apps/: kg_app.py  modal_app.py
gradio-apps/stable-kg/: gr_interface.py  kg_pipeline.py
my-agentic-app/: README.md
my-agentic-app/convex/: schema.ts
my-agentic-app/convex/functions/: http.ts  index.ts
my-agentic-app/src/: app.py
my-agentic-app/src/agents/: document_qa_agent.py  meeting_assistant_agent.py  research_agent.py
my-agentic-app/src/components/: data_ingestion.py  gradio_ui.py  retrieval.py
my-agentic-app/src/utils/: __init__.py
project-website/: docusaurus.config.ts
project-website/blog/: 2019-05-28-first-blog-post.md  2019-05-29-long-blog-post.md  2021-08-01-mdx-blog-post.mdx  2025-06-09-site-is-live.md  authors.yml  tags.yml
project-website/blog/2021-08-26-welcome/: index.md
project-website/blog/2025-06-09-welcome/: index.md
project-website/docs/: architecture.md  intro.md
project-website/src/components/HomepageFeatures/: index.tsx
project-website/src/pages/: index.tsx
scripts/: run_agent.py  run_backend.py  run_gradio_app.py  run_mcp.py  run_mcp_client.py
src/: schemas.py
src/agent/: agent.py
src/convex_mcp/: actions.py  config.py  examples.py  notebook.ipynb  server.py  utils.py
src/examples/: sandbox.ipynb
src/frontend/: __init__.py  app.py
src/gradio/: app.py
src/modal/: modal_app.py
src/rag/: rag.py
src/youtwo/: __init__.py  exceptions.py  paths.py  schemas.py  utils.py
src/youtwo/agents/: __init__.py  agent.py  prompts.py  tools.py
src/youtwo/memory/: visualize.py
src/youtwo/rag/: __init__.py  backend.py  kg_pipeline.py  pipelines.py  rag.py  vectara_client.py
src/youtwo/server/: __init__.py  actions.py  config.py  examples.py  server.py  utils.py
src/yt_agent/: __init__.py  agent.py  tools.py
src/yt_gradio/: __init__.py  app.py
src/yt_modal/: __init__.py  modal_app.py
src/yt_rag/: backend.py  kg_pipeline.py  rag.py
src/yt_rag/api_reference/: vectara-mcp-reference.py  vectara_query_response.json
