[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "youtwo"
version = "0.1.0"
authors = [{name = "Tan"}]
description = "Memory layer and RAG service"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    smolagents==1.17.0
    requests
    python-dotenv
]

[project.optional-dependencies]
agent = [
    "langchain",
    "openai"
]
gradio = [
    "gradio",
    "transformers"
]
rag = [
    "faiss-cpu",
    "sentence-transformers"
]
full = [
    "youtwo[agent]",
    "youtwo[gradio]",
    "youtwo[rag]"
]